Reorganise project, add start of javafx client